--- a/Data_Analysis/1-Numpy/Practica/Ejercicios Numpy II_RES.ipynb
+++ b/Data_Analysis/1-Numpy/Practica/Ejercicios Numpy II_RES.ipynb
@@ -726,7 +726,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9962709559063687"
+       "0.9946554072676783"
       ]
      },
      "execution_count": 31,
@@ -746,7 +746,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0022124146273372336"
+       "0.011923655780396003"
       ]
      },
      "execution_count": 32,
@@ -783,7 +783,7 @@
     {
      "data": {
       "text/plain": [
-       "0.5908470001005856"
+       "0.5564410037552957"
       ]
      },
      "execution_count": 34,
@@ -965,17 +965,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[21  2 12 16  5]\n",
-      " [20 22  4 10  3]\n",
-      " [ 1 19  2  7 13]\n",
-      " [11  9 21 19  5]\n",
-      " [ 1  3 23  9  4]] \n",
+      "[[ 6  4 11  0  8]\n",
+      " [12 13  5 10 22]\n",
+      " [18  4  0 23  9]\n",
+      " [22  2  7  0 10]\n",
+      " [14 22 15 20 16]] \n",
       "\n",
-      " [[ 1.41479663 -1.14044443  0.20441928  0.74236477 -0.73698532]\n",
-      " [ 1.28031026  1.549283   -0.87147169 -0.06455346 -1.00595806]\n",
-      " [-1.2749308   1.14582388 -1.14044443 -0.46801257  0.33890566]\n",
-      " [ 0.06993291 -0.19903983  1.41479663  1.14582388 -0.73698532]\n",
-      " [-1.2749308  -1.00595806  1.68376937 -0.19903983 -0.87147169]]\n"
+      " [[-0.67559986 -0.95023394  0.01098536 -1.49950212 -0.40096577]\n",
+      " [ 0.14830241  0.28561945 -0.8129169  -0.12633168  1.52147285]\n",
+      " [ 0.97220467 -0.95023394 -1.49950212  1.65878989 -0.26364872]\n",
+      " [ 1.52147285 -1.22486803 -0.53828281 -1.49950212 -0.12633168]\n",
+      " [ 0.4229365   1.52147285  0.56025354  1.24683876  0.69757058]]\n"
      ]
     }
    ],
@@ -993,7 +993,7 @@
     {
      "data": {
       "text/plain": [
-       "-1.3322676295501878e-15"
+       "-1.1102230246251565e-16"
       ]
      },
      "execution_count": 43,
@@ -1398,7 +1398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1406,22 +1406,22 @@
       "text/markdown": [
        "|  | <center>0 </center> | <center>1 </center> | <center>2 </center> | <center>3 </center> | <center>4 </center> | <center>5 </center> | <center>6 </center> | <center>7 </center> | <center>8 </center> | <center>9 </center> |\n",
        "|------|-----|-----|-----|-----|-----|-----|-----|-----|-----|-----|\n",
-       "| <center>0 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>O </center> | <center>O </center> | <center>O </center> | <center>O </center> | <center>  </center> |\n",
+       "| <center>0 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> |\n",
        "| <center>1 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> |\n",
        "| <center>2 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> |\n",
        "| <center>3 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> |\n",
        "| <center>4 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> |\n",
-       "| <center>5 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> |\n",
-       "| <center>6 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> |\n",
-       "| <center>7 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> |\n",
-       "| <center>8 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> |\n",
+       "| <center>5 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>O </center> | <center>  </center> |\n",
+       "| <center>6 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>O </center> | <center>  </center> |\n",
+       "| <center>7 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>O </center> | <center>  </center> |\n",
+       "| <center>8 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>O </center> | <center>  </center> |\n",
        "| <center>9 </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> | <center>  </center> |\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
