--- a/Data_Analysis/2-Pandas/Practica/6-Occupation/Occupation Grouping.ipynb
+++ b/Data_Analysis/2-Pandas/Practica/6-Occupation/Occupation Grouping.ipynb
@@ -16,10 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as  np\n",
+    "import matplotlib.pyplot as plt\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -37,10 +41,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>zip_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>M</td>\n",
+       "      <td>technician</td>\n",
+       "      <td>85711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>53</td>\n",
+       "      <td>F</td>\n",
+       "      <td>other</td>\n",
+       "      <td>94043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>23</td>\n",
+       "      <td>M</td>\n",
+       "      <td>writer</td>\n",
+       "      <td>32067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>24</td>\n",
+       "      <td>M</td>\n",
+       "      <td>technician</td>\n",
+       "      <td>43537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>33</td>\n",
+       "      <td>F</td>\n",
+       "      <td>other</td>\n",
+       "      <td>15213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>938</th>\n",
+       "      <td>939</td>\n",
+       "      <td>26</td>\n",
+       "      <td>F</td>\n",
+       "      <td>student</td>\n",
+       "      <td>33319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>939</th>\n",
+       "      <td>940</td>\n",
+       "      <td>32</td>\n",
+       "      <td>M</td>\n",
+       "      <td>administrator</td>\n",
+       "      <td>02215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>940</th>\n",
+       "      <td>941</td>\n",
+       "      <td>20</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "      <td>97229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>941</th>\n",
+       "      <td>942</td>\n",
+       "      <td>48</td>\n",
+       "      <td>F</td>\n",
+       "      <td>librarian</td>\n",
+       "      <td>78209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>942</th>\n",
+       "      <td>943</td>\n",
+       "      <td>22</td>\n",
+       "      <td>M</td>\n",
+       "      <td>student</td>\n",
+       "      <td>77841</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>943 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     user_id  age gender     occupation zip_code\n",
+       "0          1   24      M     technician    85711\n",
+       "1          2   53      F          other    94043\n",
+       "2          3   23      M         writer    32067\n",
+       "3          4   24      M     technician    43537\n",
+       "4          5   33      F          other    15213\n",
+       "..       ...  ...    ...            ...      ...\n",
+       "938      939   26      F        student    33319\n",
+       "939      940   32      M  administrator    02215\n",
+       "940      941   20      M        student    97229\n",
+       "941      942   48      F      librarian    78209\n",
+       "942      943   22      M        student    77841\n",
+       "\n",
+       "[943 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usuarios=pd.read_csv('https://raw.githubusercontent.com/justmarkham/DAT8/master/data/u.user',sep='|')\n",
+    "usuarios"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,10 +202,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "occupation\n",
+       "administrator    38.746835\n",
+       "artist           31.392857\n",
+       "doctor           43.571429\n",
+       "educator         42.010526\n",
+       "engineer         36.388060\n",
+       "entertainment    29.222222\n",
+       "executive        38.718750\n",
+       "healthcare       41.562500\n",
+       "homemaker        32.571429\n",
+       "lawyer           36.750000\n",
+       "librarian        40.000000\n",
+       "marketing        37.615385\n",
+       "none             26.555556\n",
+       "other            34.523810\n",
+       "programmer       33.121212\n",
+       "retired          63.071429\n",
+       "salesman         35.666667\n",
+       "scientist        35.548387\n",
+       "student          22.081633\n",
+       "technician       33.148148\n",
+       "writer           36.311111\n",
+       "Name: age, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usuarios.groupby('occupation')['age'].mean()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +258,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "occupation\n",
+       "administrator     54.430380\n",
+       "artist            53.571429\n",
+       "doctor           100.000000\n",
+       "educator          72.631579\n",
+       "engineer          97.014925\n",
+       "entertainment     88.888889\n",
+       "executive         90.625000\n",
+       "healthcare        31.250000\n",
+       "homemaker         14.285714\n",
+       "lawyer            83.333333\n",
+       "librarian         43.137255\n",
+       "marketing         61.538462\n",
+       "none              55.555556\n",
+       "other             65.714286\n",
+       "programmer        90.909091\n",
+       "retired           92.857143\n",
+       "salesman          75.000000\n",
+       "scientist         90.322581\n",
+       "student           69.387755\n",
+       "technician        96.296296\n",
+       "writer            57.777778\n",
+       "Name: user_id, dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "usuarios.query(\"gender=='M'\").groupby('occupation').user_id.count() / usuarios.groupby('occupation').user_id.count()*100"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,7 +310,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "usuarios.groupby('occupation').user_id.count() / usuarios.groupby('occupation').user_id.count()*100"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -169,7 +392,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
