--- a/Data_Analysis/2-Pandas/Practica/6-Occupation/Occupation Grouping.ipynb
+++ b/Data_Analysis/2-Pandas/Practica/6-Occupation/Occupation Grouping.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "[943 rows x 5 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "Name: age, dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,44 +258,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "occupation\n",
-       "administrator     54.430380\n",
-       "artist            53.571429\n",
-       "doctor           100.000000\n",
-       "educator          72.631579\n",
-       "engineer          97.014925\n",
-       "entertainment     88.888889\n",
-       "executive         90.625000\n",
-       "healthcare        31.250000\n",
-       "homemaker         14.285714\n",
-       "lawyer            83.333333\n",
-       "librarian         43.137255\n",
-       "marketing         61.538462\n",
-       "none              55.555556\n",
-       "other             65.714286\n",
-       "programmer        90.909091\n",
-       "retired           92.857143\n",
-       "salesman          75.000000\n",
-       "scientist         90.322581\n",
-       "student           69.387755\n",
-       "technician        96.296296\n",
-       "writer            57.777778\n",
-       "Name: user_id, dtype: float64"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (170616177.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[26], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    perc_masc_totales =\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "usuarios.query(\"gender=='M'\").groupby('occupation').user_id.count() / usuarios.groupby('occupation').user_id.count()*100"
+    "perc_masc_totales =(usuarios.query(\"gender=='M'\").groupby('occupation').user_id.count() / usuarios.groupby('occupation').user_id.count()).sort_values(ascending=False)*100\n",
+    "perc_masc_totales\n"
    ]
   },
   {
@@ -307,11 +284,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "occupation\n",
+       "doctor           100.000000\n",
+       "engineer          97.014925\n",
+       "technician        96.296296\n",
+       "retired           92.857143\n",
+       "programmer        90.909091\n",
+       "executive         90.625000\n",
+       "scientist         90.322581\n",
+       "entertainment     88.888889\n",
+       "lawyer            83.333333\n",
+       "salesman          75.000000\n",
+       "educator          72.631579\n",
+       "student           69.387755\n",
+       "other             65.714286\n",
+       "marketing         61.538462\n",
+       "writer            57.777778\n",
+       "none              55.555556\n",
+       "administrator     54.430380\n",
+       "artist            53.571429\n",
+       "librarian         43.137255\n",
+       "healthcare        31.250000\n",
+       "homemaker         14.285714\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "usuarios.groupby('occupation').user_id.count() / usuarios.groupby('occupation').user_id.count()*100"
+    "perc_masc_totales = usuarios['gender'].eq('M').groupby(usuarios['occupation']).transform('mean').sort_values(ascending=False)\n",
+    "perc_masc_totales\n"
    ]
   },
   {
@@ -323,10 +334,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "occupation\n",
+       "doctor           100.000000\n",
+       "engineer          97.014925\n",
+       "technician        96.296296\n",
+       "retired           92.857143\n",
+       "programmer        90.909091\n",
+       "executive         90.625000\n",
+       "scientist         90.322581\n",
+       "entertainment     88.888889\n",
+       "lawyer            83.333333\n",
+       "salesman          75.000000\n",
+       "educator          72.631579\n",
+       "student           69.387755\n",
+       "other             65.714286\n",
+       "marketing         61.538462\n",
+       "writer            57.777778\n",
+       "none              55.555556\n",
+       "administrator     54.430380\n",
+       "artist            53.571429\n",
+       "librarian         43.137255\n",
+       "healthcare        31.250000\n",
+       "homemaker         14.285714\n",
+       "Name: gender, dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "perc_masc_totales=100*usuarios.groupby('occupation')['gender'].apply(lambda x: (x == 'M').mean()).sort_values(ascending=False)\n",
+    "perc_masc_totales"
+   ]
   },
   {
    "cell_type": "markdown",
