--- a/Data_Analysis/3-Sources/Archivos/Teoría/0-Lectura Escritura.ipynb
+++ b/Data_Analysis/3-Sources/Archivos/Teoría/0-Lectura Escritura.ipynb
@@ -3932,7 +3932,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Miguel Angel\\\\Documents\\\\Bootcamp_DS_1_22\\\\ds_thebridge_1_22\\\\2-Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría'"
+       "'c:\\\\Users\\\\0205301\\\\OneDrive - SENER\\\\Documentos\\\\GitHub\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría'"
       ]
      },
      "execution_count": 1,
@@ -3954,15 +3954,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Miguel Angel\\Documents\n",
-      "c:\\Users\\Miguel Angel\\Documents\\Bootcamp_DS_1_22\\ds_thebridge_1_22\\2-Data_Analysis\\3-Sources\\Archivos\\Teoría\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[WinError 3] El sistema no puede encontrar la ruta especificada: 'c:\\\\Users\\\\Miguel Angel\\\\Documents'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\0205301\\OneDrive - SENER\\Documentos\\GitHub\\DS_PT_09_2023\\Data_Analysis\\3-Sources\\Archivos\\Teoría\\0-Lectura Escritura.ipynb Cell 93\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/3-Sources/Archivos/Teor%C3%ADa/0-Lectura%20Escritura.ipynb#Y161sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m os\u001b[39m.\u001b[39;49mchdir(\u001b[39m'\u001b[39;49m\u001b[39mc:\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mUsers\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mMiguel Angel\u001b[39;49m\u001b[39m\\\\\u001b[39;49;00m\u001b[39mDocuments\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/3-Sources/Archivos/Teor%C3%ADa/0-Lectura%20Escritura.ipynb#Y161sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(os\u001b[39m.\u001b[39mgetcwd())\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/3-Sources/Archivos/Teor%C3%ADa/0-Lectura%20Escritura.ipynb#Y161sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m os\u001b[39m.\u001b[39mchdir(\u001b[39m'\u001b[39m\u001b[39mc:\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mUsers\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mMiguel Angel\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mDocuments\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mBootcamp_DS_1_22\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mds_thebridge_1_22\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39m2-Data_Analysis\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39m3-Sources\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mArchivos\u001b[39m\u001b[39m\\\\\u001b[39;00m\u001b[39mTeoría\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 3] El sistema no puede encontrar la ruta especificada: 'c:\\\\Users\\\\Miguel Angel\\\\Documents'"
      ]
     }
    ],
@@ -4071,17 +4074,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook Ejemplo XML.ipynb\n",
-      "Notebook JSON.ipynb\n",
-      "Notebook Lectura Escritura PROF.ipynb\n",
-      "Notebook Lectura Escritura.ipynb\n"
+      "Notebook 0-Lectura Escritura.ipynb\n",
+      "Notebook 1-JSON.ipynb\n",
+      "Notebook 2-Ejemplo XML.ipynb\n"
      ]
     }
    ],
@@ -4100,7 +4102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -4108,8 +4110,7 @@
      "output_type": "stream",
      "text": [
       "directorio data\n",
-      "directorio img\n",
-      "directorio importante\n"
+      "directorio img\n"
      ]
     }
    ],
@@ -4131,24 +4132,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\thebridgedsftjun21\\\\2-Data Analysis\\\\3-Data Sources\\\\Archivos\\\\Teoria',\n",
-       "  ['.ipynb_checkpoints', 'data', 'img'],\n",
-       "  ['importante', 'laligaZIP.csv', 'Lectura Escritura.ipynb']),\n",
-       " ('C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\thebridgedsftjun21\\\\2-Data Analysis\\\\3-Data Sources\\\\Archivos\\\\Teoria\\\\.ipynb_checkpoints',\n",
-       "  [],\n",
-       "  ['Lectura Escritura-checkpoint.ipynb']),\n",
-       " ('C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\thebridgedsftjun21\\\\2-Data Analysis\\\\3-Data Sources\\\\Archivos\\\\Teoria\\\\data',\n",
-       "  ['.ipynb_checkpoints'],\n",
+       "[('c:\\\\Users\\\\0205301\\\\OneDrive - SENER\\\\Documentos\\\\GitHub\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría',\n",
+       "  ['data', 'img'],\n",
+       "  ['0-Lectura Escritura.ipynb',\n",
+       "   '1-JSON.ipynb',\n",
+       "   '2-Ejemplo XML.ipynb',\n",
+       "   'ejemplo.xml',\n",
+       "   'fichero.txt',\n",
+       "   'laligaZIP.csv',\n",
+       "   'main.json',\n",
+       "   'output.xml']),\n",
+       " ('c:\\\\Users\\\\0205301\\\\OneDrive - SENER\\\\Documentos\\\\GitHub\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría\\\\data',\n",
+       "  ['extracted_files'],\n",
        "  ['data_file.json',\n",
        "   'dog_breeds.txt',\n",
        "   'encoding.csv',\n",
        "   'file_write.txt',\n",
+       "   'file_writes.txt',\n",
        "   'laliga.csv',\n",
        "   'laliga.xlsx',\n",
        "   'laliga4.csv',\n",
@@ -4157,34 +4163,29 @@
        "   'laligaTSV.tsv',\n",
        "   'laligaTXT.txt',\n",
        "   'laligaWrite.csv',\n",
-       "   'laligaZIP.csv',\n",
        "   'laligaZIP.zip',\n",
        "   'Musical_Instruments_5.json',\n",
        "   'pepe.json',\n",
        "   'poblacion.csv',\n",
-       "   '~$laliga.xlsx']),\n",
-       " ('C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\thebridgedsftjun21\\\\2-Data Analysis\\\\3-Data Sources\\\\Archivos\\\\Teoria\\\\data\\\\.ipynb_checkpoints',\n",
+       "   'pregunta_marcos.py']),\n",
+       " ('c:\\\\Users\\\\0205301\\\\OneDrive - SENER\\\\Documentos\\\\GitHub\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría\\\\data\\\\extracted_files',\n",
        "  [],\n",
-       "  ['data_file-checkpoint.json',\n",
-       "   'dog_breeds-checkpoint.txt',\n",
-       "   'file_write-checkpoint.txt',\n",
-       "   'laliga-checkpoint.csv',\n",
-       "   'laliga4-checkpoint.csv',\n",
-       "   'laligaWrite-checkpoint.csv']),\n",
-       " ('C:\\\\Users\\\\Daney\\\\Desktop\\\\Archivos\\\\Bootcamps\\\\thebridgedsftjun21\\\\2-Data Analysis\\\\3-Data Sources\\\\Archivos\\\\Teoria\\\\img',\n",
+       "  ['laligaZIP.csv']),\n",
+       " ('c:\\\\Users\\\\0205301\\\\OneDrive - SENER\\\\Documentos\\\\GitHub\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría\\\\img',\n",
        "  [],\n",
        "  ['ejercicio.png',\n",
        "   'ejercicios.png',\n",
        "   'encoding.jpg',\n",
        "   'error.png',\n",
        "   'file.png',\n",
+       "   'importante',\n",
        "   'json_image.png',\n",
        "   'path.png',\n",
        "   'python.jpg',\n",
        "   'python.png'])]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4208,7 +4209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4217,7 +4218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4226,7 +4227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4240,18 +4241,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'img\\\\importante'"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "Error",
+     "evalue": "Destination path 'img\\importante' already exists",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mError\u001b[0m                                     Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\0205301\\OneDrive - SENER\\Documentos\\GitHub\\DS_PT_09_2023\\Data_Analysis\\3-Sources\\Archivos\\Teoría\\0-Lectura Escritura.ipynb Cell 109\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/3-Sources/Archivos/Teor%C3%ADa/0-Lectura%20Escritura.ipynb#Y213sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mshutil\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/3-Sources/Archivos/Teor%C3%ADa/0-Lectura%20Escritura.ipynb#Y213sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m shutil\u001b[39m.\u001b[39;49mmove(\u001b[39m\"\u001b[39;49m\u001b[39mimportante\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mimg\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\shutil.py:823\u001b[0m, in \u001b[0;36mmove\u001b[1;34m(src, dst, copy_function)\u001b[0m\n\u001b[0;32m    820\u001b[0m     real_dst \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mjoin(dst, _basename(src))\n\u001b[0;32m    822\u001b[0m     \u001b[39mif\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mexists(real_dst):\n\u001b[1;32m--> 823\u001b[0m         \u001b[39mraise\u001b[39;00m Error(\u001b[39m\"\u001b[39m\u001b[39mDestination path \u001b[39m\u001b[39m'\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m already exists\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m real_dst)\n\u001b[0;32m    824\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    825\u001b[0m     os\u001b[39m.\u001b[39mrename(src, real_dst)\n",
+      "\u001b[1;31mError\u001b[0m: Destination path 'img\\importante' already exists"
+     ]
     }
    ],
    "source": [
@@ -4261,25 +4264,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '__file__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\0205301\\OneDrive - SENER\\Documentos\\GitHub\\DS_PT_09_2023\\Data_Analysis\\3-Sources\\Archivos\\Teoría\\0-Lectura Escritura.ipynb Cell 110\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/3-Sources/Archivos/Teor%C3%ADa/0-Lectura%20Escritura.ipynb#Y214sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m os\u001b[39m.\u001b[39mchdir(os\u001b[39m.\u001b[39mpath(\u001b[39m__file__\u001b[39;49m))\n",
+      "\u001b[1;31mNameError\u001b[0m: name '__file__' is not defined"
+     ]
+    }
+   ],
    "source": [
     "os.chdir(os.path(__file__))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\Miguel Angel\\\\Documents\\\\Bootcamp_DS_1_22\\\\ds_thebridge_1_22\\\\2-Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría'"
+       "'c:\\\\Users\\\\0205301\\\\OneDrive - SENER\\\\Documentos\\\\GitHub\\\\DS_PT_09_2023\\\\Data_Analysis\\\\3-Sources\\\\Archivos\\\\Teoría'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4291,7 +4306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -4301,7 +4316,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\MIGUEL~1\\AppData\\Local\\Temp/ipykernel_12964/1612424831.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mchdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdirname\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0m__file__\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mc:\\Users\\0205301\\OneDrive - SENER\\Documentos\\GitHub\\DS_PT_09_2023\\Data_Analysis\\3-Sources\\Archivos\\Teoría\\0-Lectura Escritura.ipynb Cell 112\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/Data_Analysis/3-Sources/Archivos/Teor%C3%ADa/0-Lectura%20Escritura.ipynb#Y216sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m os\u001b[39m.\u001b[39mchdir(os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mdirname(\u001b[39m__file__\u001b[39;49m))\n",
       "\u001b[1;31mNameError\u001b[0m: name '__file__' is not defined"
      ]
     }
@@ -4336,7 +4351,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
