--- a/Data_Analysis/4-API/Teoría/API.ipynb
+++ b/Data_Analysis/4-API/Teoría/API.ipynb
@@ -108,7 +108,19 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: requests in c:\\users\\0205301\\onedrive - sener\\documentos\\github\\ds_pt_09_2023\\.venv\\lib\\site-packages (2.31.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\0205301\\onedrive - sener\\documentos\\github\\ds_pt_09_2023\\.venv\\lib\\site-packages (from requests) (3.3.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\0205301\\onedrive - sener\\documentos\\github\\ds_pt_09_2023\\.venv\\lib\\site-packages (from requests) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\0205301\\onedrive - sener\\documentos\\github\\ds_pt_09_2023\\.venv\\lib\\site-packages (from requests) (2.0.7)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\0205301\\onedrive - sener\\documentos\\github\\ds_pt_09_2023\\.venv\\lib\\site-packages (from requests) (2023.7.22)\n"
+     ]
+    }
+   ],
    "source": [
     "# !pip install requests "
    ]
@@ -155,26 +167,6 @@
     "\n",
     "url = 'https://as.com/'\n",
     "response = requests.get(url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response"
    ]
   },
   {
@@ -320,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +431,7 @@
        "[1292 rows x 2 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2727,7 +2719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4
  },
