--- a/Data_Analysis/4-API/Practica/API_Marvel_RES.ipynb
+++ b/Data_Analysis/4-API/Practica/API_Marvel_RES.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![marvel](https://www.emp-online.es/dw/image/v2/BBQV_PRD/on/demandware.static/-/Library-Sites-EMPSharedLibrary/default/dwe169dcbd/100151_MT_Marvel.jpg?sw=350)"
+    "![marvel](https://www.emp-online.es/dw/image/v2/BBQV_PRD/on/demandware.static/-/Library-Sites-EMPSharedLibrary/default/dwe169dcbd/100151_MT_Marvel.jpg?sw=350)\n"
    ]
   },
   {
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para esta practica vamos a utilizar la api de [`Marvel`](developer.marvel.com)"
+    "Para esta practica vamos a utilizar la api de [`Marvel`](developer.marvel.com)\n"
    ]
   },
   {
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Primero, necesitarás una clave API de Marvel, que puedes obtener registrándote en https://developer.marvel.com/"
+    "Primero, necesitarás una clave API de Marvel, que puedes obtener registrándote en https://developer.marvel.com/\n"
    ]
   },
   {
@@ -29,7 +29,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La practica consiste en crear un DataFrame de los personajes"
+    "La practica consiste en crear un DataFrame de los personajes\n"
    ]
   },
   {
@@ -38,6 +38,7 @@
    "metadata": {},
    "source": [
     "Necesitamos que el DataFrame tenga la siguiente informacion:\n",
+    "\n",
     "1. id\n",
     "2. nombre\n",
     "3. url imagen\n",
@@ -50,7 +51,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Librerias**"
+    "## **Librerias**\n"
    ]
   },
   {
@@ -68,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Crear DataFrame** atacando la `API`"
+    "## **Crear DataFrame** atacando la `API`\n"
    ]
   },
   {
@@ -242,7 +243,7 @@
        "      <td>1009149</td>\n",
        "      <td>Abyss</td>\n",
        "      <td><img src=\"http://i.annihil.us/u/prod/marvel/i/mg/9/30/535feab462a64.jpg\" width=\"200\" /></td>\n",
-       "      <td>Uncanny X-Men (1981) #402; Uncanny X-Men (1981) #404; Uncanny X-Men (1981) #405; Uncanny X-Men (1981) #406; Uncanny X-Men (1981) #429; Uncanny X-Men (1981) #431; X-Men: Alpha (1995) #1; X-Men: The Complete Age of Apocalypse Epic Book 2 (Trade Paperback)</td>\n",
+       "      <td>Uncanny X-Men (1963) #402; Uncanny X-Men (1963) #404; Uncanny X-Men (1963) #405; Uncanny X-Men (1963) #406; Uncanny X-Men (1963) #429; Uncanny X-Men (1963) #431; X-Men: Alpha (1995) #1; X-Men: The Complete Age of Apocalypse Epic Book 2 (Trade Paperback)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -410,14 +411,14 @@
        "      <td>1009435</td>\n",
        "      <td>Alicia Masters</td>\n",
        "      <td><img src=\"http://i.annihil.us/u/prod/marvel/i/mg/b/40/4c003d40ac7ae.jpg\" width=\"200\" /></td>\n",
-       "      <td>Essential Fantastic Four Vol. 4 (Trade Paperback); Fantastic Four (2022) #8; Fantastic Four (2022) #9; Fantastic Four (1998) #27; Fantastic Four (1961) #163; Fantastic Four (1961) #164; Fantastic Four (1961) #168; Fantastic Four (1961) #169; Fantastic Four (1961) #170; Fantastic Four (1961) #245; Fantastic Four (1961) #250; Fantastic Four (1961) #251; Fantastic Four (1961) #252; Fantastic Four (1961) #255; Fantastic Four (1961) #256; Fantastic Four (1961) #321; Fantastic Four (1961) #322; Fantastic Four (1961) #326; Fantastic Four (1961) #327; Fantastic Four (1961) #328</td>\n",
+       "      <td>Essential Fantastic Four Vol. 4 (Trade Paperback); Fantastic Four (2022) #8; Fantastic Four (2022) #9; Fantastic Four (2022) #14; Fantastic Four (1998) #27; Fantastic Four (1961) #163; Fantastic Four (1961) #164; Fantastic Four (1961) #168; Fantastic Four (1961) #169; Fantastic Four (1961) #170; Fantastic Four (1961) #245; Fantastic Four (1961) #250; Fantastic Four (1961) #251; Fantastic Four (1961) #252; Fantastic Four (1961) #255; Fantastic Four (1961) #256; Fantastic Four (1961) #321; Fantastic Four (1961) #322; Fantastic Four (1961) #326; Fantastic Four (1961) #327</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>1010370</td>\n",
        "      <td>Alpha Flight</td>\n",
        "      <td><img src=\"http://i.annihil.us/u/prod/marvel/i/mg/1/60/52695277ee088.jpg\" width=\"200\" /></td>\n",
-       "      <td>Alpha Flight (2011) #0.1; Alpha Flight (1983) #1; Alpha Flight (2004) #1; Alpha Flight (2023) #1; Alpha Flight (2011) #1 (Eaglesham Variant); Alpha Flight (2011) #2; Alpha Flight (1983) #2; Alpha Flight (2004) #2; Alpha Flight (2023) #2; Alpha Flight (2011) #2 (Eaglesham Variant); Alpha Flight (2023) #3; Alpha Flight (1983) #3; Alpha Flight (2004) #3; Alpha Flight (2011) #3 (Eaglesham Variant); Alpha Flight (1983) #4; Alpha Flight (2011) #4; Alpha Flight (2023) #4; Alpha Flight (2004) #4; Alpha Flight (1983) #5; Alpha Flight (2011) #5</td>\n",
+       "      <td>Alpha Flight (2011) #0.1; Alpha Flight (1983) #1; Alpha Flight (2023) #1; Alpha Flight (2004) #1; Alpha Flight (2011) #1 (Eaglesham Variant); Alpha Flight (2011) #2; Alpha Flight (1983) #2; Alpha Flight (2023) #2; Alpha Flight (2004) #2; Alpha Flight (2011) #2 (Eaglesham Variant); Alpha Flight (2023) #3; Alpha Flight (1983) #3; Alpha Flight (2004) #3; Alpha Flight (2011) #3 (Eaglesham Variant); Alpha Flight (1983) #4; Alpha Flight (2011) #4; Alpha Flight (2023) #4; Alpha Flight (2004) #4; Alpha Flight (1983) #5; Alpha Flight (2011) #5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
@@ -466,7 +467,7 @@
        "      <td>1009151</td>\n",
        "      <td>Amiko</td>\n",
        "      <td><img src=\"http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg\" width=\"200\" /></td>\n",
-       "      <td>Elektra (1996) #15; Uncanny X-Men (1981) #181; Wolverine (1988) #82; Wolverine (1988) #107; Wolverine (1988) #108; Wolverine (1988) #109; Wolverine (1988) #150; Wolverine (1988) #151; Wolverine (1988) #152; Wolverine (1988) #153; Wolverine (1988) #173; Wolverine (1988) #174</td>\n",
+       "      <td>Elektra (1996) #15; Uncanny X-Men (1963) #181; Wolverine (1988) #82; Wolverine (1988) #107; Wolverine (1988) #108; Wolverine (1988) #109; Wolverine (1988) #150; Wolverine (1988) #151; Wolverine (1988) #152; Wolverine (1988) #153; Wolverine (1988) #173; Wolverine (1988) #174</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
@@ -564,7 +565,7 @@
        "      <td>1011301</td>\n",
        "      <td>Anole</td>\n",
        "      <td><img src=\"http://i.annihil.us/u/prod/marvel/i/mg/9/20/4c002e635ddd9.jpg\" width=\"200\" /></td>\n",
-       "      <td>Age Of X-Man: Nextgen (Trade Paperback); Runaways (2008) #10; Uncanny X-Men (1981) #517; X-Men (2019) #11; X-Men (2019) #12</td>\n",
+       "      <td>Age Of X-Man: Nextgen (Trade Paperback); Runaways (2008) #10; Uncanny X-Men (1963) #517; X-Men (2019) #11; X-Men (2019) #12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>53</th>\n",
@@ -655,7 +656,7 @@
        "      <td>1009160</td>\n",
        "      <td>Arclight</td>\n",
        "      <td><img src=\"http://i.annihil.us/u/prod/marvel/i/mg/5/f0/4c0042067fd8b.jpg\" width=\"200\" /></td>\n",
-       "      <td>Uncanny X-Men (1981) #210; Uncanny X-Men (1963) #211; Uncanny X-Men (1981) #215; Uncanny X-Men (1963) #219; Uncanny X-Men (1981) #221; Uncanny X-Men (1981) #222; Uncanny X-Men (1963) #240; Uncanny X-Men (1981) #350; X-Factor (1986) #10; X-Factor (1986) #11; X-Man (1995) #18; X-Man (1995) #19; X-Men: Mutant Massacre (Trade Paperback); X-MEN: OLD SOLDIERS TPB (Trade Paperback)</td>\n",
+       "      <td>Uncanny X-Men (1963) #210; Uncanny X-Men (1963) #211; Uncanny X-Men (1963) #215; Uncanny X-Men (1963) #219; Uncanny X-Men (1963) #221; Uncanny X-Men (1963) #222; Uncanny X-Men (1963) #240; Uncanny X-Men (1963) #350; X-Factor (1986) #10; X-Factor (1986) #11; X-Man (1995) #18; X-Man (1995) #19; X-Men: Mutant Massacre (Trade Paperback); X-MEN: OLD SOLDIERS TPB (Trade Paperback)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>66</th>\n",
@@ -683,7 +684,7 @@
        "      <td>1011298</td>\n",
        "      <td>Armor (Hisako Ichiki)</td>\n",
        "      <td><img src=\"http://i.annihil.us/u/prod/marvel/i/mg/9/20/4c002e6cbf990.jpg\" width=\"200\" /></td>\n",
-       "      <td>Age Of X-Man: Nextgen (Trade Paperback); Astonishing X-Men (2004) #25; Astonishing X-Men (2004) #26; Astonishing X-Men (2004) #27; Astonishing X-Men (2004) #31; Astonishing X-Men (2004) #32; Astonishing X-Men (2004) #33; Astonishing X-Men (2004) #34; Astonishing X-Men (2004) #35; Astonishing X-Men (2004) #36; Astonishing X-Men (2004) #37; Astonishing X-Men (2004) #38; Astonishing X-Men (2004) #39; Cable (2020) #1; Cable (2017) #153; Cable Director's Cut Edition (2020) #1; Cable Vol. 2: The Newer Mutants (Trade Paperback); The Secret X-Men (2022) #1; Uncanny X-Men (1981) #510; Uncanny X-Men (1981) #517</td>\n",
+       "      <td>Age Of X-Man: Nextgen (Trade Paperback); Astonishing X-Men (2004) #25; Astonishing X-Men (2004) #26; Astonishing X-Men (2004) #27; Astonishing X-Men (2004) #31; Astonishing X-Men (2004) #32; Astonishing X-Men (2004) #33; Astonishing X-Men (2004) #34; Astonishing X-Men (2004) #35; Astonishing X-Men (2004) #36; Astonishing X-Men (2004) #37; Astonishing X-Men (2004) #38; Astonishing X-Men (2004) #39; Cable (2020) #1; Cable (2017) #153; Cable Director's Cut Edition (2020) #1; Cable Vol. 2: The Newer Mutants (Trade Paperback); The Secret X-Men (2022) #1; Uncanny X-Men (1963) #510; Uncanny X-Men (1963) #517</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>70</th>\n",
@@ -760,7 +761,7 @@
        "      <td>1009164</td>\n",
        "      <td>Avalanche</td>\n",
        "      <td><img src=\"http://i.annihil.us/u/prod/marvel/i/mg/f/10/4c0042010d383.jpg\" width=\"200\" /></td>\n",
-       "      <td>Age of X: Alpha (2010) #1; Avengers Annual (1967) #15; Cable (1993) #87; Excalibur (2019) #8; Excalibur (2019) #16; New Mutants (2003) #9; New Mutants Classic Vol. 2 (Trade Paperback); Quicksilver (1997) #9; Uncanny Avengers (2012) #1; Uncanny X-Men (1981) #142; Uncanny X-Men (1981) #177; Uncanny X-Men (1981) #178; Uncanny X-Men (1981) #199; Uncanny X-Men (1981) #200; Uncanny X-Men (1981) #206; Uncanny X-Men (1981) #225; Uncanny X-Men (1981) #226; Uncanny X-Men (1981) #255; Uncanny X-Men (1981) #401; Uncanny X-Men (1981) #402</td>\n",
+       "      <td>Age of X: Alpha (2010) #1; Avengers Annual (1967) #15; Cable (1993) #87; Excalibur (2019) #8; Excalibur (2019) #16; New Mutants (2003) #9; New Mutants Classic Vol. 2 (Trade Paperback); Quicksilver (1997) #9; Uncanny Avengers (2012) #1; Uncanny X-Men (1963) #142; Uncanny X-Men (1963) #177; Uncanny X-Men (1963) #178; Uncanny X-Men (1963) #199; Uncanny X-Men (1963) #200; Uncanny X-Men (1963) #206; Uncanny X-Men (1963) #225; Uncanny X-Men (1963) #226; Uncanny X-Men (1963) #255; Uncanny X-Men (1963) #401; Uncanny X-Men (1963) #402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>81</th>\n",
@@ -781,7 +782,7 @@
        "      <td>1011766</td>\n",
        "      <td>Azazel (Mutant)</td>\n",
        "      <td><img src=\"http://i.annihil.us/u/prod/marvel/i/mg/b/40/image_not_available.jpg\" width=\"200\" /></td>\n",
-       "      <td>Uncanny X-Men (1981) #428; Weapon X (2017) #26; X-MEN FIRST CLASS: THE HIGH HAND (2011) #1</td>\n",
+       "      <td>Dark X-Men (2023) #1; Dark X-Men (2023) #4; Dark X-Men (2023) #5; Uncanny X-Men (1963) #428; Weapon X (2017) #26; X-MEN FIRST CLASS: THE HIGH HAND (2011) #1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -816,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.6"
   },
   "orig_nbformat": 4
  },
