--- a/Machine_Learning/1-Supervisado/1-Regression/Kaggle1/Kaggle_ARN.ipynb
+++ b/Machine_Learning/1-Supervisado/1-Regression/Kaggle1/Kaggle_ARN.ipynb
@@ -3577,7 +3577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3670,7 +3670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3679,7 +3679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -3704,7 +3704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -3736,7 +3736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3745,7 +3745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -3770,7 +3770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -3802,7 +3802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3811,14 +3811,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE : 392.95665936435944\n"
+      "RMSE : 394.88264222967604\n"
      ]
     }
    ],
@@ -3836,7 +3836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -3868,7 +3868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3877,7 +3877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -3902,7 +3902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -3934,7 +3934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3948,7 +3948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -3973,7 +3973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -3991,10 +3991,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<912x191 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 21058 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -4005,7 +4019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4014,14 +4028,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE : 348.68488416122744\n"
+      "RMSE : 349.51232835582624\n"
      ]
     }
    ],
@@ -4039,7 +4053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -4064,7 +4078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4073,7 +4087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -4098,7 +4112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -4111,6 +4125,82 @@
    ],
    "source": [
     "submission.to_csv(\"XGBoost.csv\", index=False)\n",
+    "chequeator(submission)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# divide in train test:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### XGBoost2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test_ = train_test_split(Xout, yout, test_size = 0.20, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE : 233.98478654216925\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(X_train, y_train)\n",
+    "y_pred_ = model.predict(X_test)\n",
+    "y_pred=reverse_transform(y_pred_,y_test_)\n",
+    "y_test=reverse_transform(y_test_)\n",
+    "print('RMSE :',np.sqrt(mean_squared_error(y_test,y_pred)))\n",
+    "model.fit(Xout, yout)\n",
+    "y_pred_ = model.predict(Xtest)\n",
+    "y_pred=reverse_transform(y_pred_,test_)\n",
+    "submission = pd.DataFrame({\"laptop_ID\": y_pred.index, \"Price_euros\": y_pred})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You're ready to submit!\n"
+     ]
+    }
+   ],
+   "source": [
+    "submission.to_csv(\"XGBoost2.csv\", index=False)\n",
     "chequeator(submission)"
    ]
   }
